--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,7 @@
                     </div>
                     <button type="submit" class="btn btn-primary">Evaluate</button>
                 </form>
+                {{websiteAddress}}
             </div>
             <div class="col"></div>
         </div>
