--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,8 @@
   <body>
     <nav class="navbar" style="background-color: #311B92; color: #ffffff;"><span></span><span class="navbar-brand mb-0 h1">Polibugs</span><span></span></nav>
     <div class="jumbotron jumbotron-fluid" style="background-color: #ffffff; text-align: center;">
-        <h1 class="display-4"><span style="color: #004D40">Nonpartisan </span>Political <strong>Debugger</strong></h1>
-        <p class="lead">Mission Statement: We strive to provide a nonpartisan tool to analyze political bias.</p>
+        <h1 class="display-4">News at <span style="color: #004D40"><strong>Equilibrium</strong></span></h1>
+        <p class="lead">Mission Statement: We strive to provide a nonpartisan tool to provide balanced news articles.</p>
         <hr />
     </div>
     <div class="container">
@@ -19,10 +19,9 @@
             <div class="col">
                 <form action="{{url_for('index')}}" method="POST">
                     <div class="form-group">
-                        <label for="websiteAddress">Website</label>
-                        <input class="form-control" name="websiteAddress" placeholder="Enter website URL">
+                        <input class="form-control" name="websiteAddress" placeholder="Enter news article URL">
                     </div>
-                    <button type="submit" class="btn btn-primary">Evaluate</button>
+                    <button type="submit" class="btn btn-primary">Balance</button>
                 </form>
             </div>
             <div class="col"></div>
