--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
   <body>
     <nav class="navbar" style="background-color: #311B92; color: #ffffff;"><span></span><span class="navbar-brand mb-0 h1">Polibugs</span><span></span></nav>
     <div class="jumbotron jumbotron-fluid" style="background-color: #ffffff; text-align: center;">
-        <h1 class="display-4">News at <span style="color: #004D40"><strong>Equilibrium</strong></span></h1>
+        <h1 class="display-4">News at <span style="color: #004D40"><strong id="jumbotronTitleEnding">Equilibrium.</strong></span></h1>
         <p class="lead">Mission Statement: We strive to provide a nonpartisan tool to provide balanced news articles.</p>
         <hr />
     </div>
@@ -27,6 +27,35 @@
             <div class="col"></div>
         </div>
     </div>
+
+    <script>
+            var jumbotronTitle = document.getElementById('jumbotronTitleEnding');
+            setInterval(function() {
+                switch (jumbotronTitleEnding.textContent) {
+                    case "Equilibrium.":
+                        jumbotronTitleEnding.textContent = "Balance.";
+                        jumbotronTitleEnding.style.color = "#004D40";
+                        break;
+                    case "Balance.":
+                        jumbotronTitleEnding.textContent = "Symmetry.";
+                        jumbotronTitleEnding.style.color = "#004D40";
+                        break;
+                    case "Symmetry.":
+                        jumbotronTitleEnding.textContent = "Equipoise.";
+                        jumbotronTitleEnding.style.color = "#004D40";
+                        break;
+                    case "Equipoise.":
+                        jumbotronTitleEnding.textContent = "Parity.";
+                        jumbotronTitleEnding.style.color = "#004D40";
+                        break;
+                    case "Parity.":
+                        jumbotronTitleEnding.textContent = "Equilibrium.";
+                        jumbotronTitleEnding.style.color = "#004D40";
+                        break;
+                }
+            }, 4000)
+        </script>
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
