--- a/templates/evaluation.html
+++ b/templates/evaluation.html
@@ -4,36 +4,75 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
     <title>Polibugs</title>
   </head>
   <body>
     <nav class="navbar" style="background-color: #311B92; color: #ffffff;"><span></span><span class="navbar-brand mb-0 h1">Polibugs</span><span></span></nav>
     <div class="jumbotron jumbotron-fluid" style="background-color: #ffffff; text-align: center;">
-        <h1 class="display-3" id="jumbotronTitle"><strong>Searching for Political <span style="color: #9b0000">Bugs.</span></strong></h1>
+        <h1 class="display-3" id="jumbotronTitle"><strong>De<span style="color: #9b0000;">partisan</span>izing</strong></h1>
         <p class="lead">Mission Statement: We strive to provide a nonpartisan tool to analyze political bias.</p>
         <hr />
-        {{websiteAddress}}
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col" id="leftWingArticles">
+                <h1 class="display-3" style="color: #0D47A1;">Left Wing</h1>
+            </div>
+            <div class="col" id="centristArticles">
+                <h1 class="display-3" style="color: #311B92;">Centrist</h1>
+            </div>
+            <div class="col" id="rightWingArticles">
+                <h1 class="display-3" style="color: #9b0000;">Right Wing</h1>
+            </div>
+        </div>
     </div>
     <script>
-        var jumbotronTitle = document.getElementById('jumbotronTitle');
-        setInterval(function() {
-            switch (jumbotronTitle.textContent) {
-                case "Searching for Political Bugs.":
-                    jumbotronTitle.textContent = "Nonpartisan Analysis.";
-                    break;
-                case "Nonpartisan Analysis.":
-                    jumbotronTitle.textContent = "Political Debugger.";
-                    break;
-                case "Political Debugger.":
-                    jumbotronTitle.textContent = "Powered By Polibugs.";
-                    break;
-                case "Powered By Polibugs.":
-                    jumbotronTitle.textContent = "Searching for Political Bugs.";
-                    break;
+        var websiteLean = "{{ websiteLean }}";
+        var title = "{{ topic }}";
+        var domain = "";
+        switch(websiteLean) {
+            case 'conservative':
+                domain = 'wsj.com'
+                break;
+            case 'centrist':
+                domain = 'wsj.com'
+                break;
+            case 'liberal':
+                domain = 'wsj.com'          
+                break;
+        }
+        $.ajax({
+            url:
+                "https://newsapi.org/v2/everything?q=" + title + "&domains=" + domain + "&apiKey=707cdb388f3c4b2da50571fe30569538&language=en",
+            method: "GET",
+            error: function() {
+                console.log("Error!");
+            },
+            success: function(data) {
+                processData(data);
             }
-        }, 4000)
+        });
+
+        function processData(data) {
+            var articleItems = [];
+
+            for (var i = 0; i < 2; i++) {
+                var author = data.articles[i].author;
+                var title = data.articles[i].title;
+                var description = data.articles[i].description;
+                var artUrl = data.articles[i].url;
+                var picUrl = data.articles[i].urlToImage;
+                var authorElement = document.createElement('h3');
+                authorElement.innerText = 'Author: ' + author;
+                var titleElement = document.createElement('h3');
+                titleElement.innerText = 'Title: ' + title;
+                document.getElementById('leftWingArticles').append(authorElement);
+
+                console.log(artUrl);
+            }
+        }
     </script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </body>
