--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <title>Polibugs</title>
   </head>
   <body>
@@ -18,6 +19,9 @@
             <div class="col"></div>
             <div class="col">
                 <form action="{{url_for('index')}}" method="POST">
+                    <div class="form-group">
+                        <input class="form-control" name="topic" placeholder="Enter topic">
+                    </div>
                     <div class="form-group">
                         <input class="form-control" name="websiteAddress" placeholder="Enter news article URL">
                     </div>
