--- a/templates/evaluation.html
+++ b/templates/evaluation.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <title>Polibugs</title>
   </head>
   <body>
@@ -17,13 +19,13 @@
     <div class="container">
         <div class="row">
             <div class="col" id="leftWingArticles">
-                <h1 class="display-3" style="color: #0D47A1;">Left Wing</h1>
+                <h1 class="display-3" style="color: #0D47A1;">Liberal</h1>
             </div>
             <div class="col" id="centristArticles">
                 <h1 class="display-3" style="color: #311B92;">Centrist</h1>
             </div>
             <div class="col" id="rightWingArticles">
-                <h1 class="display-3" style="color: #9b0000;">Right Wing</h1>
+                <h1 class="display-3" style="color: #9b0000;">Conservative</h1>
             </div>
         </div>
     </div>
@@ -79,28 +81,53 @@
                 var description = data.articles[i].description;
                 var artUrl = data.articles[i].url;
                 var picUrl = data.articles[i].urlToImage;
-                var authorElement = document.createElement('h3');
+                var authorElement = document.createElement('h4');
                 authorElement.innerText = 'Author: ' + author;
                 var titleElement = document.createElement('a');
                 titleElement.innerText = title;
                 titleElement.href = artUrl;
-                var descriptionElement = document.createElement('h3');
+                var descriptionElement = document.createElement('h4');
                 descriptionElement.innerText = 'Description: ' + description;
-                document.getElementById(location).append(titleElement);
+
+                var cardElement = document.createElement('div');
+                cardElement.className = 'card';
+                cardElement.style = "margin-bottom: 20px;"
+                var cardImageElement = document.createElement('img');
+                cardImageElement.src = picUrl;
+                cardImageElement.className = 'card-img-top';
+                cardElement.appendChild(cardImageElement);
+                var cardBodyElement = document.createElement('div');
+                cardBodyElement.className = 'card-body';
+                var cardBodyTitleElement = document.createElement('h5');
+                cardBodyTitleElement.className = 'card-title';
+                cardBodyTitleElement.innerText = title;
+                var cardBodyDescription = document.createElement('p');
+                cardBodyDescription.className = 'card-text';
+                cardBodyDescription.innerText = description;
+                var visitArticleButtonElement = document.createElement('a');
+                visitArticleButtonElement.className = 'btn btn-primary';
+                visitArticleButtonElement.href = artUrl;
+                visitArticleButtonElement.innerText = 'Visit Article';
+                cardBodyElement.appendChild(cardBodyTitleElement);
+                cardBodyElement.appendChild(cardBodyDescription);
+                cardBodyElement.appendChild(visitArticleButtonElement);
+                cardElement.appendChild(cardBodyElement);
+
+                document.getElementById(location).appendChild(cardElement);
+
+               /* document.getElementById(location).append(titleElement);
                 document.getElementById(location).append(authorElement);
-                document.getElementById(location).append(descriptionElement);
+                document.getElementById(location).append(descriptionElement);*/
 
                 console.log(artUrl);
             }
         }
         function yourArt(location, title){
-            var yourElement = document.createElement('h3');
+            var yourElement = document.createElement('h4');
             yourElement.className = 'lead';
             yourElement.innerText = 'Your article on: ' + title;
             document.getElementById(location).append(yourElement);
         }
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </body>
 </html>
