--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <nav class="navbar" style="background-color: #311B92; color: #ffffff;"><span></span><span class="navbar-brand mb-0 h1">Polibugs</span><span></span></nav>
     <div class="jumbotron jumbotron-fluid" style="background-color: #ffffff; text-align: center;">
         <h1 class="display-4">News at <span style="color: #004D40"><strong id="jumbotronTitleEnding">Equilibrium.</strong></span></h1>
-        <p class="lead">Mission Statement: We strive to provide a nonpartisan tool to provide balanced news articles.</p>
+        <p class="lead">Mission Statement: We strive to provide a nonpartisan tool to provide balanced viewpoints on the news.</p>
         <hr />
     </div>
     <div class="container">
