--- a/templates/evaluation.html
+++ b/templates/evaluation.html
@@ -87,13 +87,13 @@
                 var description = data.articles[i].description;
                 var artUrl = data.articles[i].url;
                 var picUrl = data.articles[i].urlToImage;
-                var authorElement = document.createElement('h4');
+                /*var authorElement = document.createElement('h4');
                 authorElement.innerText = 'Author: ' + author;
                 var titleElement = document.createElement('a');
                 titleElement.innerText = title;
                 titleElement.href = artUrl;
                 var descriptionElement = document.createElement('h4');
-                descriptionElement.innerText = 'Description: ' + description;
+                descriptionElement.innerText = 'Description: ' + description;*/
 
                 var cardElement = document.createElement('div');
                 cardElement.className = 'card';
