--- a/templates/evaluation.html
+++ b/templates/evaluation.html
@@ -11,9 +11,9 @@
   </head>
   <body>
     <nav class="navbar" style="background-color: #311B92; color: #ffffff;"><span></span><span class="navbar-brand mb-0 h1">Polibugs</span><span></span></nav>
-    <div class="jumbotron jumbotron-fluid" style="background-color: #ffffff; text-align: center;">
-        <h1 class="display-3" id="jumbotronTitle"><strong>De<span style="color: #9b0000;">partisan</span>izing</strong></h1>
-        <p class="lead">Mission Statement: We strive to provide a nonpartisan tool to provide balanced viewpoints on the news.</p>
+    <div class="jumbotron jumbotron-fluid" style="background-image: url('https://cdn.cnn.com/cnnnext/dam/assets/170119164810-politics-2017-background---dark-full-169.jpg'); text-align: center;">
+        <h1 class="display-3" id="jumbotronTitle" style="color: #E91E63;"><strong>Departisanizing</strong></h1>
+        <p class="lead" style="color: #e0e0e0">Mission Statement: We strive to provide a nonpartisan tool to provide balanced viewpoints on the news.</p>
         <hr />
     </div>
     <div class="container">
