--- a/templates/index.html
+++ b/templates/index.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <title>Polibugs</title>
   </head>
-  <body>
+  <body style="background-image: url('https://i.ytimg.com/vi/mMKyZntMxBo/maxresdefault.jpg');">
     <nav class="navbar" style="background-color: #311B92; color: #ffffff;"><span></span><span class="navbar-brand mb-0 h1">Polibugs</span><span></span></nav>
     <div class="jumbotron jumbotron-fluid" style="background-color: #ffffff; text-align: center;">
         <h1 class="display-4">News at <span style="color: #004D40"><strong id="jumbotronTitleEnding">Equilibrium.</strong></span></h1>
         <p class="lead">Mission Statement: We strive to provide a nonpartisan tool to provide balanced viewpoints on the news.</p>
-        <hr />
     </div>
     <div class="container">
         <div class="row">
@@ -25,7 +24,7 @@
                     <div class="form-group">
                         <input class="form-control" name="websiteAddress" placeholder="Enter news article URL">
                     </div>
-                    <button type="submit" class="btn btn-primary">Balance</button>
+                    <button type="submit" class="btn btn-light" style="color: #311B92;">Balance</button>
                 </form>
             </div>
             <div class="col"></div>
