--- a/templates/evaluation.html
+++ b/templates/evaluation.html
@@ -7,6 +7,7 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
     <title>Polibugs</title>
   </head>
   <body>
@@ -29,8 +30,37 @@
             </div>
         </div>
     </div>
+
+    <script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-messaging.js"></script>
+
     <script>
-var websiteLean = "{{ websiteLean }}";
+        var config = {
+          apiKey: "AIzaSyAtc5KoFfGJEi7JsL2DbLKJ_TMw7MqFXOQ",
+          authDomain: "polibugs-project.firebaseapp.com",
+          databaseURL: "https://polibugs-project.firebaseio.com",
+          projectId: "polibugs-project",
+          storageBucket: "",
+          messagingSenderId: "899329781122"
+        };
+        firebase.initializeApp(config);
+
+        var database = firebase.database();
+
+        function writeArticlesData(articleId) {
+            firebase.database().ref('articles/').set({
+                article: articleId
+            });
+        }
+        writeArticlesData( "{{ websiteAddress }}" );
+      </script>
+
+    <script>
+        var websiteLean = "{{ websiteLean }}";
         var yourTitle = "{{ title }}";
         var yourWebsiteAddress = extractRootDomain("{{ websiteAddress }}");
         var supportConservative = ['foxnews.com', 'dailymail.com', 'breitbart.com'];
