--- a/templates/evaluation.html
+++ b/templates/evaluation.html
@@ -11,7 +11,7 @@
     <title>Polibugs</title>
   </head>
   <body>
-    <nav class="navbar" style="background-color: #311B92; color: #ffffff;"><span></span><span class="navbar-brand mb-0 h1">Polibugs</span><span></span></nav>
+    <nav class="navbar" style="background-color: #311B92; color: #ffffff;"><span></span><a class="navbar-brand mb-0 h1" href="{{ url_for('index') }}">Polibugs</a><span></span></nav>
     <div class="jumbotron jumbotron-fluid" style="background-image: url('https://cdn.cnn.com/cnnnext/dam/assets/170119164810-politics-2017-background---dark-full-169.jpg'); text-align: center;">
         <h1 class="display-3" id="jumbotronTitle" style="color: #E91E63;"><strong>Departisanizing</strong></h1>
         <p class="lead" style="color: #e0e0e0">Mission Statement: We strive to provide a nonpartisan tool to provide balanced viewpoints on the news.</p>
